--- a/task3-iRockAgain/source/style.css
+++ b/task3-iRockAgain/source/style.css
@@ -1,9 +1,10 @@
-div {
-    text-align: center;
-    margin-top: 100px;
+body{
+    margin: 0;
+    height: 100dvh;
 }
 
-img {
-    height:500px;
-    width:400px;
+div {
+    text-align: center;
+    padding-top: 100px;
 }
+
